Tested Gen.generate.

--- a/Src/AutoCheck.UnitTests/AutoCheck.UnitTests.fsproj
+++ b/Src/AutoCheck.UnitTests/AutoCheck.UnitTests.fsproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="GenTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AutoCheck\AutoCheck.fsproj">
