--- a/Src/AutoCheck/AutoCheck.fsproj
+++ b/Src/AutoCheck/AutoCheck.fsproj
@@ -46,6 +46,8 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Random.fs" />
     <Compile Include="Gen.fs" />
+    <Compile Include="Property.fs" />
+    <Compile Include="Runner.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
