Added PropertyTests, as empty module.

--- a/Src/AutoCheck.UnitTests/AutoCheck.UnitTests.fsproj
+++ b/Src/AutoCheck.UnitTests/AutoCheck.UnitTests.fsproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="GenTests.fs" />
+    <Compile Include="PropertyTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AutoCheck\AutoCheck.fsproj">
