Renamed to LightCheck.

--- a/Src/LightCheck/LightCheck.fsproj
+++ b/Src/LightCheck/LightCheck.fsproj
@@ -7,12 +7,12 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>001f9b73-33fe-4f6c-95ee-b18776744a53</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>AutoCheck</RootNamespace>
-    <AssemblyName>AutoCheck</AssemblyName>
+    <RootNamespace>LightCheck</RootNamespace>
+    <AssemblyName>LightCheck</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>AutoCheck</Name>
+    <Name>LightCheck</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,7 +22,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\AutoCheck.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\LightCheck.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,7 +31,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\AutoCheck.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\LightCheck.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
