--- a/Src/LightCheck.Tests/LightCheck.Tests.fsproj
+++ b/Src/LightCheck.Tests/LightCheck.Tests.fsproj
@@ -7,12 +7,12 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>11fcc0f7-22cb-43ef-b4bc-e1fa4a2180f2</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>AutoCheck.UnitTests</RootNamespace>
-    <AssemblyName>AutoCheck.UnitTests</AssemblyName>
+    <RootNamespace>LightCheck.UnitTests</RootNamespace>
+    <AssemblyName>LightCheck.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>AutoCheck.UnitTests</Name>
+    <Name>LightCheck.Tests</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,7 +22,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\AutoCheck.UnitTests.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\LightCheck.UnitTests.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,30 +31,8 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\AutoCheck.UnitTests.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\LightCheck.UnitTests.XML</DocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Content Include="app.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="GenTests.fs" />
-    <Compile Include="PropertyTests.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AutoCheck\AutoCheck.fsproj">
-      <Name>AutoCheck</Name>
-      <Project>{001f9b73-33fe-4f6c-95ee-b18776744a53}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -152,4 +130,24 @@
       </ItemGroup>
     </When>
   </Choose>
+  <ItemGroup>
+    <Content Include="app.config" />
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="GenTests.fs" />
+    <Compile Include="PropertyTests.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <ProjectReference Include="..\LightCheck\LightCheck.fsproj">
+      <Name>LightCheck</Name>
+      <Project>{001f9b73-33fe-4f6c-95ee-b18776744a53}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
