Introduced Shrink module.

--- a/Src/LightCheck/LightCheck.fsproj
+++ b/Src/LightCheck/LightCheck.fsproj
@@ -46,6 +46,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Random.fs" />
     <Compile Include="Gen.fs" />
+    <Compile Include="Shrink.fs" />
     <Compile Include="Property.fs" />
     <Compile Include="Config.fs" />
     <Compile Include="Runner.fs" />
