--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 *.userosscache
 *.sln.docstates
 
+# Custom scripts that are there only for testing purposes
+Src/LightCheck/Script.fsx
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
