Renamed GenTests to GenExamples, because they are more like example-based tests.

--- a/Src/LightCheck.UnitTests/LightCheck.UnitTests.fsproj
+++ b/Src/LightCheck.UnitTests/LightCheck.UnitTests.fsproj
@@ -133,7 +133,7 @@
   <ItemGroup>
     <Content Include="app.config" />
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="GenTests.fs" />
+    <Compile Include="GenExamples.fs" />
     <Compile Include="ShrinkTests.fs" />
     <Compile Include="PropertyTests.fs" />
   </ItemGroup>
