Renamed ShrinkTests to ShrinkExamples, because they are more like example-based tests.

--- a/Src/LightCheck.UnitTests/LightCheck.UnitTests.fsproj
+++ b/Src/LightCheck.UnitTests/LightCheck.UnitTests.fsproj
@@ -134,7 +134,7 @@
     <Content Include="app.config" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="GenExamples.fs" />
-    <Compile Include="ShrinkTests.fs" />
+    <Compile Include="ShrinkExamples.fs" />
     <Compile Include="PropertyTests.fs" />
   </ItemGroup>
   <ItemGroup>
