Renamed PropertyTests to PropertyExamples, because they are more like example-based tests.

--- a/Src/LightCheck.UnitTests/LightCheck.UnitTests.fsproj
+++ b/Src/LightCheck.UnitTests/LightCheck.UnitTests.fsproj
@@ -135,7 +135,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="GenExamples.fs" />
     <Compile Include="ShrinkExamples.fs" />
-    <Compile Include="PropertyTests.fs" />
+    <Compile Include="PropertyExamples.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
